--- a/week1/index.html
+++ b/week1/index.html
@@ -6,22 +6,23 @@
 </head>
 
 <body>
-	<table border="1" cellspacing="0" cellpadding="0">
+	<table border="2" cellspacing="0">
 		<tr>
 			<td colspan="2" bgcolor="#D3EDF6"><h1>BMW M5</h1></td>
 		</tr>
 		<tr>
-			<td bgcolor="#D3EDF6"><img src="http://www.vladtime.ru/uploads/posts/2017-02/1487862044_2017-bmw-m-5-1.jpg"/height="250px" width="500px"><p><a href="D:/porcshe.html" target="_blank">more images</a></p></td>
+			<td bgcolor="#D3EDF6"><img src="http://www.vladtime.ru/uploads/posts/2017-02/1487862044_2017-bmw-m-5-1.jpg"/height="250px" width="500px"><a href="D://week1/porcshe.html" >more images</a><</td>
 				<td bgcolor="#D3EDF6" width="100%">The F90 M5, based on the BMW 5 Series (G30) was presented on 21 August 2017 during the 2017 Gamescom, to promote the upcoming Need for Speed Payback video game followed by a public reveal at the Frankfurt Motor Show (IAA) in September 2017. The car is available to customers from the spring of 2018, exclusively as a sedan. The "M5 First Edition" model, which is limited to 400 units, is only available at the start of sales.In contrast to the previous generations, the M5 is available for the first time with all-wheel drive. BMW, however relies on a rear biased design that is designed exclusively for driving dynamics with a true rear wheel drive mode included in the all-wheel drive system as well. The engine is an evolution of the S63 from the previous generation.With a power of 441 kW (600 PS; 591 bhp) the new M5 has the same power as the limited edition "Competition Package" and "30 Jahre M5" models of the previous generation, while the torque has been raised to 750 N⋅m (553 lb⋅ft), 70 N⋅m more than the previous M5. The car is now equipped with an eight-speed automatic transmission as opposed to the previous M5's 7-speed dual-clutch transmission (DCT). The F90 is the first M5 to only have an automatic transmission, which has been chosen for its durability and because shift times are not significantly slower than a DCT.</td>
 		</tr>
 	</table>
 	<br>
-	<table border="1" cellpadding="0" cellspacing="0">
+	<table border="2" cellspacing="0">
 		<tr>
 			<td colspan="2" bgcolor="#D3EDF6"><h1>ROLLS-ROYCE</h1></td>
 		</tr>
 		<tr>
-			<td><img src="D://2009-Rolls-Royce-Phantom-Coupe-1.jpg"/height="250px" width="500px"></td>
+			<td><img src="D://week1/2009-Rolls-Royce-Phantom-Coupe-1.jpg"/height="250px" width="500px"><a href="D://week1/porcshe.html" target="_blank">
+				more images</a></td>
 
 			<td bgcolor="#D3EDF6" width="100%"> Rolls-Royce Limited, the original company founded in 1906 which began liquidation in 1971 and the quite separate new owner of its business, Rolls-Royce (1971) Limited, now renamed Rolls-Royce plc. It incorporated Rolls-Royce Motors to own its car division in 1973 and then sold it to Vickers in 1980
 				Rolls-Royce plc an aerospace, power systems and defence company incorporated in 1971 and Rolls-Royce's current principal operating company
