--- a/week1/week6.1.html
+++ b/week1/week6.1.html
@@ -3,7 +3,7 @@
   <head>
   <style>
     div[data-status='done'] span{
-      text-decoration:line;
+      text-decoration:line-through;
     }
   </style>
     <script src="script1.js" defer></script><!--defer otkladivaet vipolnenie scripta do zagryzki html str.-->
